<package>
  <name>rosmatlab_common_msgs</name>
  <version>0.1.0</version>
  <description>
     rosmatlab_common_msgs makes all message types in common_msgs available in Matlab.
  </description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>
  <license>BSD</license>
  <url type="website">http://github.com/tu-darmstadt-ros-pkg/rosmatlab/wiki/common_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosmatlab</build_depend>
  <build_depend>common_msgs</build_depend>

  <run_depend>rosmatlab</run_depend>

</package>

