<?xml version="1.0"?>
<package>
  <name>rosmatlab_rosbag</name>
  <version>0.1.0</version>
  <description>The rosmatlab_rosbag package</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/tu-darmstadt-ros-pkg/rosmatlab/wiki/rosbag</url>
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rosmatlab</build_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosmatlab</run_depend>
</package>
